--- a/ui/src/components/index.css
+++ b/ui/src/components/index.css
@@ -11,7 +11,11 @@
 th,
 td {
   padding-top: 10px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 40px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+body {
+  padding: 30px;
 }
